Fixed user sidebar in posts on mobile #2

--- a/less/topic.less
+++ b/less/topic.less
@@ -152,6 +152,10 @@
 					
 					.panel-body.clearfix {
 						padding: 0;
+						
+						small {
+							text-align: left;
+						}
 					}
 				}
 			}
